--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Run unit tests
       run: |
-        python tests/test_calculator.py -v
+        python test_calculator.py -v
 
     - name: Install Doxygen
       run: sudo apt-get install -y doxygen 
